<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Назад -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_back"
        app:tint="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Имя/тикер -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        tools:text="Bitcoin"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSymbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="BTC"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Цена рынка (readonly, опционально) -->
<!--    <TextView-->
<!--        android:id="@+id/tvPrice1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/price"-->
<!--        android:layout_marginTop="12dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvSymbol"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvPrice"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        tools:text="$42,000"-->
<!--        android:layout_marginStart="8dp"-->
<!--        app:layout_constraintStart_toEndOf="@+id/tvPrice1"-->
<!--        app:layout_constraintTop_toTopOf="@+id/tvPrice1" />-->

    <!-- Покупка / Продажа -->
    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSymbol">

        <RadioButton
            android:id="@+id/rbBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/buy" />

        <RadioButton
            android:id="@+id/rbSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/sell" />
    </RadioGroup>

    <!-- Количество -->
    <TextView
        android:id="@+id/labelQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kolvo_et"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/rgType"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/qty_hint"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/labelQty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Цена сделки -->
    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_to_buy_et"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edtQty"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@id/labelPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <!-- fragment_currency_detail.xml: блок примечания -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNote"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="300"
        app:boxStrokeColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/edtPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_hint"
            android:imeOptions="actionDone"
            android:maxLines="3"
            android:inputType="textCapSentences|textMultiLine"
            android:gravity="top"
            android:paddingTop="8dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Кнопка действия -->
    <Button
        android:id="@+id/btnPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_light"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="#001FFF"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNote" />

    <!-- Прогресс -->
    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
