<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_portf"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/settings_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/settings_icon"
        app:tint="?attr/colorOnBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/summary_card"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/stoimost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portf_value"/>

            <TextView
                android:id="@+id/TV_avg_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profit"
                android:layout_alignParentEnd="true"/>

            <LinearLayout
                android:id="@+id/value_lin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/stoimost_tv"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/value_portfolio_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="$0"/>

                <TextView
                    android:id="@+id/profit_portfolio_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/value_lin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/value_lin"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/invested_portfolio_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="$0" />

                <TextView
                    android:id="@+id/roi_portfolio_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+0.00%" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/headers_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/summary_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin_name" />

        <TextView
            android:id="@+id/textView_quantity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_name"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/textView_currentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView_purchasePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Buy_price"
            android:layout_centerHorizontal="true"
            android:layout_toStartOf="@id/textView_currentPrice"
            android:layout_toEndOf="@id/textView_name" />

        <TextView
            android:id="@+id/avgPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_name"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/avg" />

        <TextView
            android:id="@+id/textView_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_l"
            android:layout_below="@id/textView_name"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/headers_row"
        app:layout_constraintBottom_toTopOf="@id/add_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/add_img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/add_icon"
        app:tint="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
