<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.LoginActivity"
    android:background="@color/white" >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="34dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/Hello"
        android:textSize="40sp"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/coinspirit_description"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/login"
        android:textColor="?attr/colorOnBackground"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/email_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="34dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            app:srcCompat="@drawable/mail_icon"
            app:tint="?attr/iconColor"/>

        <EditText
            android:id="@+id/email_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:maxLines="1"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/email"
            android:textColor="?attr/colorOnBackground"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_lin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_lin">

        <ImageView
            android:id="@+id/icon_password"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/lock_icon"
            app:tint="?attr/iconColor"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:fontFamily="@font/ubuntu_light"
            android:hint="@string/password"
            android:textColor="?attr/colorOnBackground"
            android:maxLines="1"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_lin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_here"
            android:textColor="?attr/colorOnBackground">

        </TextView>

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/sign_up"
            android:textColor="@color/blue">

        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>