<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.MainActivity">

        <TextView
            android:id="@+id/textView4"
            android:stateListAnimator="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/y_portf"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/settings_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/settings_icon"
            app:tint="?attr/iconColor"/>


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_border"
            android:padding="16dp"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:id="@+id/stoimost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/portf_value"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_avg_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:text="@string/profit"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/value_lin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/stoimost_tv"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/value_portfolio_tv"
                    android:layout_width="220dp"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/profit_portfolio_tv"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="bottom"
                    android:text="@string/_999"
                    android:textColor="@color/green"
                    android:textSize="30sp" />


            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/add_img"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/add_icon"
            app:tint="?attr/iconColor"
            android:stateListAnimator="@null"/>

    <RelativeLayout
        android:id="@+id/rl_opisanie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/coin_name"
            android:textColor="?attr/colorOnBackground"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/textView_currentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/Price"
            android:textColor="?attr/colorOnBackground"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView_purchasePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/Buy_price"
            android:textColor="?attr/colorOnBackground"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_toStartOf="@id/textView_currentPrice"
            android:layout_toLeftOf="@id/textView_currentPrice"
            android:layout_toEndOf="@id/textView_name"
            android:layout_toRightOf="@id/textView_name" />

        <TextView
            android:id="@+id/textView_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/quantity"
            android:textColor="?attr/colorOnBackground"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_below="@id/textView_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/add_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_opisanie" />

</androidx.constraintlayout.widget.ConstraintLayout>